[LCAM-1777] Apply fixes suggested by SonarQube
- Change stream method to use "toList" so that the list is immutable.
- Rename variables to match expected naming conventions.
- Remove method that had identical implementation to another method (givenValidDateWithoutPartnerAndContraryInterest_WhenGetAssessmentCriteriaIsInvoked_ThenAssessmentCriteriaShouldBeReturnedWithZeroedPartnerWeightingFactor).
- Change a constant to be static.
- Remove "isTrue" from "isBlank" assertions.